fix z-index

--- a/src/assets/sass/_products.sass
+++ b/src/assets/sass/_products.sass
@@ -54,6 +54,8 @@
 				// border: 1px solid $mainColor
 				color: $black
 
+				z-index: 2
+
 				background-color: $lightBackgroundColor
 
 				&.green
